[tool.poetry]
name = "hdhestia"
version = "0.1.1a0"
description = ""
authors = ["Danilo Paes <danilo.paes@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
hdmdata = {path = "../homedigger-models", develop = true}
black = "^23.12.1"


[tool.poetry.group.internal.dependencies]
hdmailman = {path = "../homedigger-mailman", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
