[tool.poetry]
name = "hdhestia"
version = "0.1.1a0"
description = ""
authors = ["Danilo Paes <danilo.paes@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pika = "^1.3.2"
hdmailman = {git = "https://github.com/danilopsss/homedigger-mailman.git"}
hdmdata = {git = "https://github.com/danilopsss/homedigger-models.git"}



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
